renamed statistic endpoint and service for getting the attendance of a section by date.